--- a/slider.html
+++ b/slider.html
@@ -6,45 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
     <!-- Link Swiper's CSS -->
-    <link rel="stylesheet" href="./swiper.min.css">
-
-    <!-- Demo styles -->
-    <style>
-    body {
-        background: #eee;
-        font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-        font-size: 14px;
-        color:#000;
-        margin: 0;
-        padding: 0;
-    }
-    .swiper-container {
-        width: 100%;
-        height: 300px;
-        margin: 20px auto;
-    }
-    .swiper-slide {
-        text-align: center;
-        font-size: 18px;
-        background: #fff;
-        width: 100%;
-        /*margin-right: 10px;*/
-
-        /* Center slide text vertically */
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: -webkit-flex;
-        display: flex;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        -webkit-justify-content: center;
-        justify-content: center;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        -webkit-align-items: center;
-        align-items: center;
-    }
-    </style>
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
     <!-- Swiper -->
@@ -68,10 +30,10 @@
     <!-- Initialize Swiper -->
     <script src="./slider.js"></script>
     <script type="text/javascript">
-        var swiper = new slider({
-            width: 300
+        var swiper = TFFSlider(".swiper-container", {
+            offsetLeft: 20,
+            margin: 10
         });
-        swiper.init();
     </script>
 </body>
 </html>
