--- a/editor/index.html
+++ b/editor/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="./css/master.css">
     </head>
     <body>
-        <div class="editor" contenteditable="true" onload="load()"></div>
+        <div id="editor" class="editor" contenteditable="true" onload="load()"></div>
     </body>
     <script src="./js/index.js" charset="utf-8"></script>
 </html>
